--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,8 @@
-- repo: local
-  hooks:
-    - id: uv-pip-compile
-      name: Compile requirements.txt
-      entry: uv pip compile pyproject.toml -o requirements.txt --no-header --no-annotate --no-deps
-      language: system
-      pass_filenames: false
+repos:
+  - repo: local
+    hooks:
+      - id: uv-pip-compile
+        name: Compile requirements.txt
+        entry: uv pip compile pyproject.toml -o requirements.txt --no-header --no-annotate --no-deps
+        language: system
+        pass_filenames: false
