--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
     "selenium>=4.29.0",
+    "webdriver-manager>=4.0.2",
 ]
 
 [dependency-groups]
