--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "webdriver-factory"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
+    "python-dotenv>=1.0.1",
     "selenium>=4.29.0",
     "webdriver-manager>=4.0.2",
 ]
